[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/rope/Rope.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/env/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://assets/items/rope.png" type="Texture" id=3]
[ext_resource path="res://assets/chars/player_walk_hat.png" type="Texture" id=4]
[ext_resource path="res://src/screen_intro/ScreenIntro.gd" type="Script" id=5]
[ext_resource path="res://src/SpeechBubble.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/chars/player_walk.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 21 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 21 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 21 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 21 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="ScreenIntro" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 20, 20 )
format = 1
tile_data = PoolIntArray( 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 2, 0, 851982, 1, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 917514, 3, 0, 917518, 4, 0, 983050, 3, 0, 983054, 4, 0 )

[node name="Rope" parent="." instance=ExtResource( 1 )]
position = Vector2( 251.773, 168.4 )
rope_segments = 18
in_intro = true

[node name="StaticRope" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="StaticRope"]
position = Vector2( 249.222, 171.19 )
rotation = 0.747001
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="StaticRope"]
position = Vector2( 244.095, 177.024 )
rotation = 0.747001
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="StaticRope"]
position = Vector2( 239.095, 182.774 )
rotation = 0.747001
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="StaticRope"]
position = Vector2( 233.845, 188.399 )
rotation = 0.747001
texture = ExtResource( 3 )

[node name="Sprite5" type="Sprite" parent="StaticRope"]
position = Vector2( 228.72, 194.149 )
rotation = 0.747001
texture = ExtResource( 3 )

[node name="Sprite6" type="Sprite" parent="StaticRope"]
position = Vector2( 223.72, 199.899 )
rotation = 0.747001
texture = ExtResource( 3 )

[node name="Sprite7" type="Sprite" parent="StaticRope"]
position = Vector2( 218.845, 205.649 )
rotation = 0.747001
texture = ExtResource( 3 )

[node name="Sprite8" type="Sprite" parent="StaticRope"]
position = Vector2( 213.72, 211.524 )
rotation = 0.747001
texture = ExtResource( 3 )

[node name="Sprite9" type="Sprite" parent="StaticRope"]
position = Vector2( 208.47, 217.149 )
rotation = 0.747001
texture = ExtResource( 3 )

[node name="Sprite10" type="Sprite" parent="StaticRope"]
position = Vector2( 203.095, 223.024 )
rotation = 0.747001
texture = ExtResource( 3 )

[node name="Sprite11" type="Sprite" parent="StaticRope"]
position = Vector2( 197.595, 228.774 )
rotation = 0.747001
texture = ExtResource( 3 )

[node name="Sprite12" type="Sprite" parent="StaticRope"]
position = Vector2( 191.97, 234.274 )
rotation = 0.747001
texture = ExtResource( 3 )

[node name="Sprite13" type="Sprite" parent="StaticRope"]
position = Vector2( 191.97, 234.274 )
rotation = 0.747001
texture = ExtResource( 3 )

[node name="Sprite14" type="Sprite" parent="StaticRope"]
position = Vector2( 186.595, 239.774 )
rotation = 0.747001
texture = ExtResource( 3 )

[node name="Sprite15" type="Sprite" parent="StaticRope"]
position = Vector2( 181.095, 245.149 )
rotation = 0.747001
texture = ExtResource( 3 )

[node name="Sprite16" type="Sprite" parent="StaticRope"]
position = Vector2( 175.845, 250.399 )
rotation = 0.747001
texture = ExtResource( 3 )

[node name="Sprite17" type="Sprite" parent="StaticRope"]
position = Vector2( 170.595, 255.774 )
rotation = 0.747001
texture = ExtResource( 3 )

[node name="Sprite18" type="Sprite" parent="StaticRope"]
position = Vector2( 165.47, 256.899 )
rotation = 1.9443
texture = ExtResource( 3 )

[node name="Sprite19" type="Sprite" parent="StaticRope"]
position = Vector2( 161.595, 258.024 )
rotation = 1.9443
texture = ExtResource( 3 )

[node name="Sprite20" type="Sprite" parent="StaticRope"]
position = Vector2( 155.97, 258.399 )
rotation = 1.9443
texture = ExtResource( 3 )

[node name="Sprite21" type="Sprite" parent="StaticRope"]
position = Vector2( 156.47, 256.399 )
rotation = 0.74351
texture = ExtResource( 3 )

[node name="Sprite22" type="Sprite" parent="StaticRope"]
position = Vector2( 161.47, 255.899 )
rotation = 0.74351
texture = ExtResource( 3 )

[node name="Sprite23" type="Sprite" parent="StaticRope"]
position = Vector2( 165.095, 256.274 )
rotation = 0.74351
texture = ExtResource( 3 )

[node name="Sprite24" type="Sprite" parent="StaticRope"]
position = Vector2( 154.071, 256.904 )
rotation = 0.74351
texture = ExtResource( 3 )

[node name="Sir" type="AnimatedSprite" parent="."]
position = Vector2( -2.53164, 248.916 )
frames = SubResource( 5 )
playing = true

[node name="Tween" type="Tween" parent="Sir"]

[node name="Dude" type="AnimatedSprite" parent="."]
position = Vector2( 307.343, 251.916 )
frames = SubResource( 10 )
frame = 1
playing = true
flip_h = true

[node name="Tween" type="Tween" parent="Dude"]

[node name="SirTarget" type="Position2D" parent="."]
position = Vector2( 141.196, 248.916 )

[node name="DudeTarget" type="Position2D" parent="."]
position = Vector2( 301.196, 251.916 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SirSpeech" parent="CanvasLayer" instance=ExtResource( 6 )]
margin_left = 9.0
margin_top = 156.0
margin_right = 166.0
margin_bottom = 230.0

[node name="DudeSpeech" parent="CanvasLayer" instance=ExtResource( 6 )]
margin_left = 285.0
margin_top = 160.0
margin_right = 427.0
margin_bottom = 230.0

[node name="VBoxContainer" parent="CanvasLayer/DudeSpeech" index="0"]
margin_top = 4.57956
margin_bottom = -5.42044

[node name="Text" parent="CanvasLayer/DudeSpeech/VBoxContainer" index="0"]
margin_right = 132.0

[node name="TextureRect" parent="CanvasLayer/DudeSpeech" index="1"]
margin_left = 16.379
margin_right = 29.379

[editable path="CanvasLayer/DudeSpeech"]
